website/dataplatform_versioned_docs/version-3.5.0/dataplatform_CKAN_Overview.md
---
id: ckan_Overview
title: Overview
sidebar_label: Overview
---

Here you will find an overview of what CKAN is, in addition to what you can accomplish with CKAN.

## CKAN 

CKAN stands for "Comprehensive Knowledge Archive Network," which is a <a href="https://en.wikipedia.org/wiki/Web_application" target="_blank">web-based</a>, <a href="https://en.wikipedia.org/wiki/Open-source_software" target="_blank">open-source</a> management system for the storage and distribution of <a href="https://en.wikipedia.org/wiki/Open_data" target="_blank">open data</a>. 

Civity's Dataplatform project uses a CKAN isntance as our web-based tool for dataset, datasource, and metadata maintenance.  

You may find our CKAN instance at <a href="https://ckan.dataplatform.nl/" target="_blank">ckan.dataplatform.nl</a>.

## Language selection 
>The language selector is found in the footer. 

CKAN supports many European languages. Presently, CKAN Dataplatform is available in Dutch (Nederlands), English; Swedish Dataplatform products are available in Swedish (Svenska) and English. 
 
## Datasets  
> datasets are managed at <a href="https://ckan.dataplatform.nl/" target="_blank">https://ckan.dataplatform.nl</a> and presented at <a href="https://dataplatform.nl" target="_blank">https://dataplatform.nl</a>

Datasets comprise of two main aspects: 
* A collection of datasources 
* Metadata 


## Dataset Metadata 
The metadata contains information about the collection of datasources in the dataset. The metadata should give information about: 
* Who owns the dataset 
* Descriptive information about the content 
* Access rights 

## Datasources 
A dataset is comprised of a collection of datasources; these are the actual files or links that provide data. Your datasource may be comprised of a single sources, or many sources, any file format, and must contain explicit metadata. 

## Metadata 
> Metadata is simply data about data 

Every dataset contains metadata. For open data we follow the guidelines set in the DCAT-Standard. 

Metadata is information that provides data about other data. Typically this means a description and context about existing data. 

For a comprehensive example, see [Metadata](metadata_Metadata#metadata-example)